<resources>
    <string name="app_name">百度一下</string>
    <string name="keywords">百度一下</string>
    <string name="search">百度一下</string>

    <string name="item_app">应用</string>
    <string name="item_game">游戏</string>
    <string name="item_news">新闻</string>
    <string name="item_novel">小说</string>
    <string name="item_video">视频</string>

    <string name="item_bar">贴吧</string>
    <string name="item_pic">图片</string>
    <string name="item_map">地图</string>
    <string name="item_music">音乐</string>
    <string name="item_addr">网址</string>

    <string name="default_hot">手机百度，最省流量的极速APP</string>

</resources>
