<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/logo"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <com.android.baidu.mobile.ClearEditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_weight="2"
            android:background="@drawable/search_bg"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_button"
            android:layout_weight="7"
            android:text="@string/search" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/item_1"
        android:layout_below="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/item_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_app"
            android:layout_weight="1"
            android:text="@string/item_app"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_game"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_game"
            android:layout_weight="1"
            android:text="@string/item_game"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_news"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_news"
            android:layout_weight="1"
            android:text="@string/item_news"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_novel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_novel"
            android:layout_weight="1"
            android:text="@string/item_novel"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_video"
            android:layout_weight="1"
            android:text="@string/item_video"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/item_1"
        android:orientation="horizontal"
        android:id="@+id/item_2">

        <!-- button-back -->
        <Button
            android:id="@+id/item_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_bar"
            android:layout_weight="1"
            android:text="@string/item_bar"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_pic"
            android:layout_weight="1"
            android:text="@string/item_pic"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_map"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_map"
            android:layout_weight="1"
            android:text="@string/item_map"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_music"
            android:layout_weight="1"
            android:text="@string/item_music"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/item_addr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/item_addr"
            android:layout_weight="1"
            android:text="@string/item_addr"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_2"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_hot" />

        <TextView
            android:id="@+id/text_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/default_hot" />

    </LinearLayout>

</RelativeLayout>